--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<!-- Apple Web Application -->
         <meta name="apple-mobile-web-app-title" content="My Tasks">
 		<link rel="apple-touch-icon" href="https://i.imgur.com/6mVgZxJ.jpg">
+        <link rel="apple-touch-startup-image" href="https://i.imgur.com/cSZAPF1.jpg">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">   
 		<!-- Stylesheets -->
