--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 		<!-- Apple Web Application -->
         <meta name="apple-mobile-web-app-title" content="My Tasks">
 		<link rel="apple-touch-icon" href="https://i.imgur.com/6mVgZxJ.jpg">
-        <link rel="apple-touch-startup-image" href="https://i.imgur.com/cSZAPF1.jpg">
+        <link href="https://i.imgur.com/cSZAPF1.jpg"
+         media="(device-width: 375px) and (device-height: 667px)
+                and (-webkit-device-pixel-ratio: 2)"
+         rel="apple-touch-startup-image">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">   
 		<!-- Stylesheets -->
