--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 and (-webkit-device-pixel-ratio: 2)"
          rel="apple-touch-startup-image">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">   
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <!-- Android Web Application -->
+        <link rel="manifest" href="resources/manifest.webmanifest">
 		<!-- Stylesheets -->
 		<link rel="stylesheet" type="text/css" href="resources/css/reset.min.css">
 		<link rel="stylesheet" type="text/css" href="resources/css/style.css">
