--- a/index.html
+++ b/index.html
@@ -1,49 +1,53 @@
 <!DOCTYPE html>
 <html>
-	<head>
-        <!-- Content Type Meta tag -->
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <!--Responsive Viewport Meta tag-->
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<title>My Tasks</title>
-		<!-- Apple Web Application -->
-        <meta name="apple-mobile-web-app-title" content="My Tasks">
-		<link rel="apple-touch-icon" href="https://i.imgur.com/6mVgZxJ.jpg">
-        <link href="https://i.imgur.com/cSZAPF1.jpg"
-         media="(device-width: 375px) and (device-height: 667px)
-                and (-webkit-device-pixel-ratio: 2)"
-         rel="apple-touch-startup-image">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <!-- Android Web Application -->
-        <link rel="manifest" href="resources/manifest.webmanifest">
-		<!-- Stylesheets -->
-		<link rel="stylesheet" type="text/css" href="resources/css/reset.min.css">
-		<link rel="stylesheet" type="text/css" href="resources/css/style.css">
-	</head>
-	<body>
-
-		<header>
-            <div class="container">
-            <h1>My Tasks</h1>
-			<input type="text" placeholder="Add a Task" id="item">
-			<button id="add">
-				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve"><g><path class="fill" d="M16,8c0,0.5-0.5,1-1,1H9v6c0,0.5-0.5,1-1,1s-1-0.5-1-1V9H1C0.5,9,0,8.5,0,8s0.5-1,1-1h6V1c0-0.5,0.5-1,1-1s1,0.5,1,1v6h6C15.5,7,16,7.5,16,8z"/></g></svg>
-			</button>
-            </div>
-		</header>
-
-		<div class="container2">
-			<!-- Uncompleted tasks -->
-            <h2>Tasks</h2>
-			<ul class="todo" id="todo"></ul>
-            <div class="splitter"></div>
-			<!-- Completed tasks -->
-            <h2>Completed Tasks</h2>
-			<ul class="todo" id="completed"></ul>
+<head>
+	<!-- Content Type Meta tag -->
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type"><!--Responsive Viewport Meta tag-->
+	<meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
+	<title>My Tasks</title><!-- Apple Web Application -->
+	<meta content="My Tasks" name="apple-mobile-web-app-title">
+	<link href="https://i.imgur.com/6mVgZxJ.jpg" rel="apple-touch-icon">
+	<meta content="yes" name="apple-mobile-web-app-capable">
+	<meta content="black" name="apple-mobile-web-app-status-bar-style"><!-- Android Web Application -->
+	<link href="resources/PWA/manifest.json" rel="manifest"><!-- Stylesheets -->
+	<link href="resources/css/reset.min.css" rel="stylesheet" type="text/css">
+	<link href="resources/css/style.css" rel="stylesheet" type="text/css">
+	<link rel="">
+	<script src="https://github.com/boyofgreen/manUp.js">
+	</script>
+	<script>
+	      //This is the "Offline page" service worker
+	      //Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+	      if (navigator.serviceWorker.controller) {
+	       console.log('[PWA Builder] active service worker found, no need to register')
+	      } else {
+	       //Register the ServiceWorker
+	       navigator.serviceWorker.register('pwabuider-sw.js', {
+	         scope: './'
+	       }).then(function(reg) {
+	         console.log('Service worker has been registered for scope:'+ reg.scope);
+	       });
+	      }
+	</script>
+</head>
+<body>
+	<header>
+		<div class="container">
+			<h1>My Tasks</h1><input id="item" placeholder="Add a Task" type="text"> <button id="add"><svg style="enable-background:new 0 0 16 16;" version="1.1" viewbox="0 0 16 16" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
+			<g>
+				<path class="fill" d="M16,8c0,0.5-0.5,1-1,1H9v6c0,0.5-0.5,1-1,1s-1-0.5-1-1V9H1C0.5,9,0,8.5,0,8s0.5-1,1-1h6V1c0-0.5,0.5-1,1-1s1,0.5,1,1v6h6C15.5,7,16,7.5,16,8z"></path>
+			</g></svg></button>
 		</div>
-
-		<!-- JavaScripts -->
-		<script src="resources/js/main.js"></script>
-	</body>
+	</header>
+	<div class="container2">
+		<!-- Uncompleted tasks -->
+		<h2>Tasks</h2>
+		<ul class="todo" id="todo"></ul>
+		<div class="splitter"></div><!-- Completed tasks -->
+		<h2>Completed Tasks</h2>
+		<ul class="todo" id="completed"></ul>
+	</div><!-- JavaScripts -->
+	<script src="resources/js/main.js">
+	</script>
+</body>
 </html>
